--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
 
+<img src="img/logo.png" alt=""><br>
 <div class="warcze">  </div>
 <script type="text/javascript" src="./js/main.js">
 
