--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   </head>
   <body>
 
-<img src="img/logo.png" alt=""><br>
-<div class="warcze">  </div>
+<div class="slash">  </div>
+<!-- <img src="img/logo.png" alt=""><br> -->
+<!-- <div class="warcze">  </div> -->
 <script type="text/javascript" src="./js/main.js">
 
 </script>
