--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
   </head>
   <body>
 
+<div class="container">
 <div class="slash">  </div>
 <!-- <img src="img/logo.png" alt=""><br> -->
 <!-- <div class="warcze">  </div> -->
+</div>
 <script type="text/javascript" src="./js/main.js">
 
 </script>
