--- a/index.html
+++ b/index.html
@@ -8,12 +8,19 @@
   <body>
 
 <div class="container">
+  <img src="img/logo.png" alt=""><br>
 <div class="slash">  </div>
-<!-- <img src="img/logo.png" alt=""><br> -->
-<!-- <div class="warcze">  </div> -->
-</div>
-<script type="text/javascript" src="./js/main.js">
 
+<div class="warcze">  </div>
+
+<footer>
+elo
+</footer>
+</div>
+
+
+
+<script type="text/javascript" src="./js/main.js">
 </script>
   </body>
 </html>
