--- a/index.html
+++ b/index.html
@@ -1,26 +1,49 @@
 <!DOCTYPE html>
 <html lang="pl" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="./css/master.css">
-    <title>clash</title>
-  </head>
-  <body>
 
-<div class="container">
-  <img src="img/logo.png" alt=""><br>
-<div class="slash">  </div>
+<head>
+  <meta charset="utf-8">
+  <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Lato" rel="stylesheet">
 
-<div class="warcze">  </div>
+  <link rel="stylesheet" href="./css/master.css">
 
-<footer>
-elo
-</footer>
-</div>
+  <title>clash</title>
+</head>
+
+<body>
+
+  <div class="container">
+    <header>
+      <div class="left-bar bar">
+        <div class="health-left health"></div>
+        <span>Kozi Syn</span>
+      </div>
+      <div class="logo">
+
+      </div>
+      <div class="right-bar bar">
+        <div class="health-right health"></div>
+        <span>Jeremi Rębajło</span>
+      </div>
+    </header>
+    <div class="fight">
+      <div class="win">
+
+      </div>
+      <div class="monsta"> </div>
+      <div class="slash"> </div>
+    </div>
+
+    <footer>
+      <div class="atak">  Atak!  </div>
+
+    </footer>
+  </div>
 
 
 
-<script type="text/javascript" src="./js/main.js">
-</script>
-  </body>
+  <script type="text/javascript" src="./js/main.js">
+  </script>
+</body>
+
 </html>
