--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       </div>
       <div class="right-bar bar">
-        <div class="health-right health"></div>
+        <div class="health-right health "></div>
         <span>Jeremi Rębajło</span>
       </div>
     </header>
@@ -35,7 +35,7 @@
     </div>
 
     <footer>
-      <div class="atak">  Atak!  </div>
+      <div class="atak">  <span>Atak! </span> <div class="skullAtak">  </div> </div>
 
     </footer>
   </div>
