some changes in css

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
 
     <footer>
-      <div class="atak">  <span>Atak! </span> <div class="skullAtak">  </div> </div>
+      <div class="action atak">  <span>Atak! </span> <div class="skullAtak">  </div> </div>
 
     </footer>
   </div>
