working on defend move

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 
       </div>
       <div class="monsta"> </div>
-      <div class="slash"> </div>
+      <div class="hero"> </div>
     </div>
 
     <footer>
       <div class="action atak">  <span>Atak! </span> <div class="skullAtak">  </div> </div>
-
+      <div class="action defend">  <span>Defend! </span> <div class="skullAtak">  </div> </div>
     </footer>
   </div>
 
