--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     <footer>
       <div class="action atak">  <span>Atak! </span> <div class="skullAtak">  </div> </div>
       <div class="action defend">  <span>Defend! </span> <div class="skullAtak">  </div> </div>
+      <!-- zrobic jedną klasę do ikon w css -->
+      <div class="action feint">  <span>Feint! </span> <div class="skullAtak">  </div> </div>
     </footer>
   </div>
 
