--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     </div>
 
     <footer>
-      <div class="action atak">  <span>Atak! </span> <div class="skullAtak">  </div> </div>
-      <div class="action defend">  <span>Defend! </span> <div class="skullAtak">  </div> </div>
+      <div class="action atak">  <span>Atak! </span> <div class="actionIcon iconSkull">  </div> </div>
+      <div class="action defend">  <span>Defend! </span> <div class="actionIcon iconDefend">  </div> </div>
       <!-- zrobic jedną klasę do ikon w css -->
-      <div class="action feint">  <span>Feint! </span> <div class="skullAtak">  </div> </div>
+      <div class="action feint">  <span>Feint! </span> <div class="actionIcon">  </div> </div>
     </footer>
   </div>
 
