--- a/index.html
+++ b/index.html
@@ -34,11 +34,31 @@
       <div class="hero"> </div>
     </div>
 
+    <aside class="sidebar">
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+      <div class="aside-button">
+        
+      </div>
+    </aside>
+
     <footer>
-      <div class="action atak">  <span>Atak! </span> <div class="actionIcon iconSkull">  </div> </div>
-      <div class="action defend">  <span>Defend! </span> <div class="actionIcon iconDefend">  </div> </div>
+      <div class="action atak"> <span>Atak! </span>
+        <div class="actionIcon iconSkull"> </div>
+      </div>
+      <div class="action defend"> <span>Defend! </span>
+        <div class="actionIcon iconDefend"> </div>
+      </div>
       <!-- zrobic jedną klasę do ikon w css -->
-      <div class="action feint">  <span>Feint! </span> <div class="actionIcon">  </div> </div>
+      <div class="action feint"> <span>Feint! </span>
+        <div class="actionIcon"> </div>
+      </div>
     </footer>
   </div>
 
