--- a/index.html
+++ b/index.html
@@ -44,20 +44,23 @@
         <li></li>
       </ul>
       <div class="aside-button">
-        
+
       </div>
     </aside>
 
     <footer>
-      <div class="action atak"> <span>Atak! </span>
+      <div class="action atak">
         <div class="actionIcon iconSkull"> </div>
+        <span>Atak!</span>
       </div>
-      <div class="action defend"> <span>Defend! </span>
+      <div class="action defend">
         <div class="actionIcon iconDefend"> </div>
+        <span>Defend!</span>
       </div>
       <!-- zrobic jedną klasę do ikon w css -->
-      <div class="action feint"> <span>Feint! </span>
+      <div class="action feint">
         <div class="actionIcon"> </div>
+        <span>Feint!</span>
       </div>
     </footer>
   </div>
