--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
         <li></li>
       </ul>
       <div class="aside-button">
-
       </div>
     </aside>
 
@@ -55,12 +54,12 @@
       </div>
       <div class="action defend">
         <div class="actionIcon iconDefend"> </div>
-        <span>Defend!</span>
+        <span>Obrona!</span>
       </div>
       <!-- zrobic jedną klasę do ikon w css -->
       <div class="action feint">
         <div class="actionIcon"> </div>
-        <span>Feint!</span>
+        <span>Zmylka!</span>
       </div>
     </footer>
   </div>
