css feint action icon

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
       <!-- zrobic jedną klasę do ikon w css -->
       <div class="action feint">
-        <div class="actionIcon"> </div>
+        <div class="actionIcon iconFeint"> </div>
         <span>Zmylka!</span>
       </div>
     </footer>
