info div for lower resolution

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
         <span>Zmylka!</span>
       </div>
     </footer>
+    <div class="res-info">
+     Version for lower resolutions coming soon!
+    </div>
   </div>
 
 
