hero action show

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
       <div class="hero"> </div>
     </div>
 
+    <div class="right-action">
+
+    <span>Atak</span></div>
+
     <aside class="sidebar">
       <ul>
         <li></li>
