--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
 
     <div class="right-action">
 
-    <span>Atak</span></div>
+  </div>
+  <div class="left-action">
+    
+  </div>
 
     <aside class="sidebar">
       <ul>
