--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
       </div>
     </aside>
 
+<div class="fatality-button">
+  <p>Kończ Waść!</p>
+</div>
+
     <footer>
       <div class="action atak">
         <div class="actionIcon iconSkull"> </div>
