--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <!-- zrobic jedną klasę do ikon w css -->
       <div class="action feint">
         <div class="actionIcon iconFeint"> </div>
-        <span>Zmylka!</span>
+        <span>Sztuczka!</span>
       </div>
     </footer>
     <div class="res-info">
