--- a/index.html
+++ b/index.html
@@ -43,14 +43,19 @@
   <div class="orel"></div>
 
     <aside class="sidebar">
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
+      <div class="sarmacki-logo">
+<a href="https://grzegorzeryks.github.io/sarmackistyl/"></a>
+      </div>
+
+
+      <div class="side-icon skullicon-side ">
+
+      </div>
+      <h2>Attack</h2>
+      <div class="side-icon shieldicon-side"></div>
+      <h2>Defend</h2>
+      <div class="side-icon jokericon-side"></div>
+      <h2>Feint</h2>
       <div class="aside-button">
       </div>
     </aside>
